<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/purple_200"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/adopta2"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>


<EditText
        android:id="@+id/txtCorreoUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:drawableStart="@drawable/correo"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:textColorHint="@color/teal_200"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:drawableLeft="@drawable/bloquear"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/teal_200"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/ingresar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="#FF9800"
            app:cornerRadius="20dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/registrate"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#FF9800"
            app:cornerRadius="20dp"/>

    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>