<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/purple_200"
    tools:context=".RegistrarseActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/adopta1"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>




    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:drawableLeft="@drawable/correo"
        android:textColorHint="@color/teal_200"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="E-Mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtPassword1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:drawableLeft="@drawable/bloquear"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/teal_200"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtPassword2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:drawableLeft="@drawable/bloquear"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirmar_password"
        android:textColorHint="@color/teal_200"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/white"/>

    </androidx.cardview.widget.CardView>




</androidx.appcompat.widget.LinearLayoutCompat>

